[package]
name = "xogamedev"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
log4rs = "1.3.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
